fix new bug spacing of parameters and add/remove buttons

--- a/assets/css/components/Input_components.scss
+++ b/assets/css/components/Input_components.scss
@@ -118,6 +118,10 @@ textarea:focus, input:focus{
 
 // focus states
 
+.custom-select {
+  background-size: 0px;
+}
+
 .custom-select:focus{
   border: 2px solid $brand-blue;
 }
